--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 version: '3' # composeファイルのバーション指定
 services:
-  app: # service名
-    build: . # ビルドに使用するDockerfileがあるディレクトリ指定
+  # service名
+  app:
+    build: ./docker/golang
     tty: true # コンテナの起動永続化
+    ports:
+      - "8080:8080"
     volumes:
       - .:/go/src/work # マウントディレクトリ指定
+    command: go run main.go
