--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,31 @@ services:
     volumes:
       - .:/go/src/work # マウントディレクトリ指定
     command: go run main.go
+  db:
+    image: mysql:5.7
+    container_name: mysql_host
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: nygesdb
+      MYSQL_USER: nyges
+      MYSQL_PASSWORD: nyges
+      TZ: 'Asia/Tokyo'
+    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    volumes:
+    - ./docker/mysql/data:/var/lib/mysql
+    - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+    - ./docker/mysql/sql:/docker-entrypoint-initdb.d
+    ports:
+    - 3306:3306
+
+  # phpMyAdmin
+  phpmyadmin:
+    container_name: phpmyadmin
+    image: phpmyadmin/phpmyadmin
+    environment:
+    - PMA_ARBITRARY=1
+    - PMA_HOSTS=mysql_host
+    - PMA_USER=root
+    - PMA_PASSWORD=root
+    ports:
+    - 8090:80
