--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,19 @@ jobs:
 
     - name: Test
       run: go test -v ./hello
+
+    - name: Notify Slack
+      run: |
+        data=$(cat <<EOF
+        {
+          "channel": "nyegs",
+          "username": "github-actions",
+          "text": "Success"
+        }
+        EOF
+        )
+        curl -X POST \
+             -H "Content-type: application/json; charset=utf-8" \
+             -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" \
+             -d "$data" \
+             https://slack.com/api/chat.postMessage
