--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,7 +41,7 @@ jobs:
         data=$(cat <<EOF
         {
           "channel": "C011DTDCZP0",
-          "username": "GA",
+          "username": "GithubActions",
           "text": "Success"
         }
         EOF
