--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,8 +41,8 @@ jobs:
         data=$(cat <<EOF
         {
           "channel": "C011DTDCZP0",
-          "username": "GithubActions",
-          "text": "Success"
+          "username": "ga",
+          "text": "SuccessしたGithubActinosのWorkflowがあります"
         }
         EOF
         )
