--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -67,8 +67,8 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
-        container-name: nyegs-app
+        task-definition: nyges-task.json
+        container-name: nyegs-container
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
@@ -76,5 +76,5 @@ jobs:
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: nyegs-app-service
-        cluster: default
+        cluster: nyegs-cluster
         wait-for-service-stability: true
