--- a/docker/golang/Dockerfile
+++ b/docker/golang/Dockerfile
@@ -1,10 +1,6 @@
-# ベースとなるDockerイメージ指定
 FROM golang:latest
-# コンテナ内に作業ディレクトリを作成
+RUN go get github.com/labstack/echo/...
 RUN mkdir /go/src/work
-# コンテナログイン時のディレクトリ指定
 WORKDIR /go/src/work
-# ホストのファイルをコンテナの作業ディレクトリに移行
 ADD . /go/src/work
-
-EXPOSE 8080
+CMD ["go", "run", "main.go"]
