--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
       run: go build -v ./hello
 
     - name: Test
-      run: go test -v ./hello
+      run: go test -v ./api/*
 
     - name: Notify Slack
       run: |
