--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./hello
+      run: go build -v ./api/*
 
     - name: Test
       run: go test -v ./api/*
